switch to color box style #2.

--- a/README.rdoc
+++ b/README.rdoc
@@ -2,6 +2,10 @@
 
 Make links open in lightbox (colorbox) a breeze
 
+= Note
+
+This is a modified version that uses Example 2 CSS.
+
 = Usage
 
 in your application.css
